# use-antlr4-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  LangLexer.g4  LangParser.g4  README.md  vcpkg-configuration.json  vcpkg.json
examples/: example1.txt
test_rig/: CMakeLists.txt  test_rig_main.cpp
